# CS2-LinuxExternal

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  globals.h  main.cpp  notes
Features/: CAimbot.cpp  CAimbot.h  CESP.cpp  CESP.h  CRecoilControlSystem.cpp  CRecoilControlSystem.h  CTriggerbot.cpp  CTriggerbot.h  CVisuals.cpp  CVisuals.h
SDK/: WeaponType.h  defs.h  key_codes.cpp  key_codes.h  player_info.h  weapon_type.h
SDK/Helper/: CEntityCache.cpp  CEntityCache.h  CInput.cpp  CInput.h  CSchemaManager.cpp  CSchemaManager.h  ConVar.cpp  ConVar.h
Utils/: Config.cpp  Config.h  Overlay.cpp  Overlay.h  Utils.cpp  Utils.h  glow_render.h
Utils/BVH/: Bvh.h  dmx_parser.h  map_manager.cpp  map_manager.h  map_parser.h  map_visibility.h
